--- a/index.html
+++ b/index.html
@@ -42,5 +42,36 @@
       첫 문단의 첫번째 문장입니다. </br>
       첫 문단읜 두번째 문장입니다.
     </p>
-  </body>
-</html>
+
+    <!--list items -->
+    <h2>저녁메뉴 후보군</h2>
+    <!-- <ol reversed> -->
+    <ol type="I" start="13"> <!-- type: 1(default) , a,A, i,I -->
+
+      <li>치킨</li>
+      <li>돈까스</li>
+      <li>콩고기</li>
+    </ol>
+    <p>1. 치킨</p><!-- 이렇게쓰면 안돼요 -->
+  
+<h2> 좋아하는 동물 </h2>
+    <ul>
+    <li>강아지</li>
+    <li>고양이</li>  
+    <li>악어</li>
+    </ul>
+
+  <!--anchor -->
+<a href="https://festa.io/events/4997"> 등록하기 </a>
+<a href="https://festa.io/events/4997" target="_blank"> 등록하기 </a>
+    <img src="./dunk.jpeg" alt="슬램덩크" width="200" />
+    <picture>
+      <source srcset="./dunk.jpeg" media="(max-width: 480px)" />
+      <source srcset="./dog.jpg" media="(min-width: 481px)" />
+      <img src="./dunk.jpeg" width="300" />
+    
+    </picture>
+
+    <video width="640" height="360"controls="controls">
+<source src="run.mp4 "type="video/mp4" />
+    </video>
