--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!--css,js files-->
-  <link href="style.css" rel="stylsheet" type="text/css">
+  <link href="style.css" rel="stylesheet" type="text/css">
   <style>
     body{
       background-color: #904200;
+      font-family: "Black Han Sans", sans-serif;
     }
   </style>
   <link rel="preconnect" href="https://fonts.googleapis.com">
